--- a/ytenx/templates/layout.html
+++ b/ytenx/templates/layout.html
@@ -40,10 +40,10 @@
           <div class="nav-collapse">
             <ul class="nav">
               <li class="{% block index_active %}{% endblock %}">
-                <a href="{% url 'views.index_page' %}">首頁</a>
+                <a href="{% url 'views.index_page' vertical %}">首頁</a>
               </li>
               <li class="{% block kyonh_active %}{% endblock %}">
-                <a href="{% url 'kyonh.views.index_page' %}">廣韻</a>
+                <a href="{% url 'kyonh.views.index_page' vertical %}">廣韻</a>
               </li>
               <li class="{% block trngyan_active %}{% endblock %}">
                 <a href="{% url 'trngyan.views.triung_ngyan_qim_yonh' %}">中原音韻</a>
