--- a/ytenx/templates/layout.html
+++ b/ytenx/templates/layout.html
@@ -46,28 +46,28 @@
                 <a href="{% url 'kyonh.views.index_page' vertical=vertical %}">廣韻</a>
               </li>
               <li class="{% block trngyan_active %}{% endblock %}">
-                <a href="{% url 'trngyan.views.triung_ngyan_qim_yonh' %}">中原音韻</a>
+                <a href="{% url 'trngyan.views.triung_ngyan_qim_yonh' vertical=vertical %}">中原音韻</a>
               </li>
               <li class="{% block tcenghyonhtsen_active %}{% endblock %}">
-                <a href="{% url 'tcenghyonhtsen.views.index_page' %}">洪武正韻牋</a>
+                <a href="{% url 'tcenghyonhtsen.views.index_page' vertical=vertical %}">洪武正韻牋</a>
               </li>
               <li class="{% block pyonh_active %}{% endblock %}">
-                <a href="{% url 'pyonh.views.pyon_yonh' %}">分韻撮要</a>
+                <a href="{% url 'pyonh.views.pyon_yonh' vertical=vertical %}">分韻撮要</a>
               </li>
               <li class="{% block dciangxkox_active %}{% endblock %}">
                 <a href="{% url 'dciangxkox.views.dciangx_kox' %}">上古音系</a>
               </li>
               <li class="{% block byoh_lyuk_active %}{% endblock %}">
-                <a href="{% url 'byohlyuk.views.byoh_lyuk' '' %}">附錄</a>
+                <a href="{% url 'byohlyuk.views.byoh_lyuk' '' vertical=vertical %}">附錄</a>
               </li>
               <li class="{% block about_active %}{% endblock %}">
-                <a href="{% url 'views.about_page' %}">關於</a>
+                <a href="{% url 'views.about_page' vertical=vertical %}">關於</a>
               </li>
               <li class="{% block kiemx_sriek_active %}{% endblock %}">
-                <a href="{% url 'views.kiemx_sriek' %}">高級檢索</a>
+                <a href="{% url 'views.kiemx_sriek' vertical=vertical %}">高級檢索</a>
               </li>
             </ul>
-            <form class="navbar-search pull-left" action="{% url 'views.zim' %}">
+            <form class="navbar-search pull-left" action="{% url 'views.zim' vertical=vertical %}">
               <input type="text" class="search-query span3" name="dzih" placeholder="在此輸入要檢索的字">
               <input type="hidden" name="dzyen" value="1">
               <input type="hidden" name="jtkb" value="1">
