--- a/ytenx/templates/layout.html
+++ b/ytenx/templates/layout.html
@@ -58,7 +58,7 @@
                 <a href="{% url 'dciangxkox.views.dciangx_kox' %}">上古音系</a>
               </li>
               <li class="{% block byoh_lyuk_active %}{% endblock %}">
-                <a href="{% url 'byohlyuk.views.byoh_lyuk' name='' vertical=vertical %}">附錄</a>
+                <a href="{% url 'byohlyuk.views.byoh_lyuk' '' %}">附錄</a>
               </li>
               <li class="{% block about_active %}{% endblock %}">
                 <a href="{% url 'views.about_page' vertical=vertical %}">關於</a>
