--- a/ytenx/templates/layout.html
+++ b/ytenx/templates/layout.html
@@ -83,7 +83,11 @@
         </div>
       </div>
     </div>
-    <div class="container">
+    {% if vertical == 1 %}
+      <div class="container" style="writing-mode:vertical-rl;text-orientation:mixed;">
+    {% else %}
+      <div class="container">
+    {% endif %}    
       <div class="row">
         {% block body %}{% endblock %}
       </div>
