--- a/ytenx/templates/layout.html
+++ b/ytenx/templates/layout.html
@@ -30,7 +30,11 @@
   <body>
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
-        <div class="container">
+        {% if vertical == 1 %}
+          <div class="container" style="writing-mode:horitzontal-rl;">
+        {% else %}
+          <div class="container">
+        {% endif %}
           <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
