--- a/ytenx/templates/layout.html
+++ b/ytenx/templates/layout.html
@@ -31,7 +31,7 @@
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
         {% if vertical == 1 %}
-          <div class="container" style="writing-mode:horizontal-rl;">
+          <div class="container" style="direction:rtl;">
         {% else %}
           <div class="container">
         {% endif %}
