--- a/ytenx/templates/layout.html
+++ b/ytenx/templates/layout.html
@@ -30,11 +30,7 @@
   <body>
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
-        {% if vertical == 1 %}
-          <div class="container" style="direction:rtl;">
-        {% else %}
-          <div class="container">
-        {% endif %}
+        <div class="container">
           <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -46,7 +42,7 @@
             <a id="brand" class="brand" href="{% url 'views.index_page' %}"><img src="/static/img/brand.gif" title="韻典網" width="100" height="40"></a>
           {% endif %}
           <div class="nav-collapse">
-            <ul class="nav">
+            <ul class="nav" style="direction:rtl;">
               <li class="{% block index_active %}{% endblock %}">
                 <a href="{% url 'views.index_page' vertical=vertical %}">首頁</a>
               </li>
@@ -74,6 +70,13 @@
               <li class="{% block kiemx_sriek_active %}{% endblock %}">
                 <a href="{% url 'views.kiemx_sriek' vertical=vertical %}">高級檢索</a>
               </li>
+              <li>
+                {% if vertical == 1 %}
+                  <a href="{% url 'views.index_page' vertical=0 %}">橫版</a>
+                {% else %}
+                  <a href="{% url 'views.index_page' vertical=1 %}">縱版</a>
+                {% endif %}
+              </li>              
             </ul>
             <form class="navbar-search pull-left" action="{% url 'views.zim' vertical=vertical %}">
               <input type="text" class="search-query span3" name="dzih" placeholder="在此輸入要檢索的字">
