--- a/ytenx/templates/layout.html
+++ b/ytenx/templates/layout.html
@@ -16,6 +16,8 @@
       body {
         padding-top: 60px;
         padding-bottom: 40px;
+        overflow-x: scroll;
+        overflow-y: scroll;
       }
       .sidebar-nav {
         padding: 9px 0;
@@ -32,7 +34,7 @@
     <link rel="apple-touch-icon-precomposed" href="/static/ico/apple-touch-icon-57-precomposed.png">
   </head>
   <body>
-    <div class="navbar navbar-fixed-right">
+    <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
           <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
