--- a/ytenx/templates/layout.html
+++ b/ytenx/templates/layout.html
@@ -97,7 +97,7 @@
       </div>
     </div>
     {% if vertical == 1 %}
-      <div class="container" style="writing-mode:vertical-rl;text-orientation:mixed;">
+      <div class="container" style="writing-mode:vertical-rl; text-orientation:mixed;  width:100%; overflow:auto;">
     {% else %}
       <div class="container">
     {% endif %}    
