--- a/ytenx/templates/layout.html
+++ b/ytenx/templates/layout.html
@@ -48,7 +48,11 @@
             <a id="brand" class="brand" href="{% url 'views.index_page' %}"><img src="/static/img/brand.gif" title="韻典網" width="100" height="40"></a>
           {% endif %}
           <div class="nav-collapse">
-            <ul class="nav" style="direction:rtl;">
+            {% if vertical == 1 %}
+              <ul class="nav" style="direction:rtl;">
+            {% else %}
+              <ul class="nav">
+            {% endif %}
               <li class="{% block index_active %}{% endblock %}">
                 <a href="{% url 'views.index_page' vertical=vertical %}">首頁</a>
               </li>
