--- a/ytenx/templates/layout.html
+++ b/ytenx/templates/layout.html
@@ -22,6 +22,11 @@
       .sidebar-nav {
         padding: 9px 0;
       }
+      {% if vertical == 1 %}
+        .nav.navbar-nav li {
+          float: right;
+        }
+      {% endif %}
     </style>
     <link href="/static/css/bootstrap-responsive.min.css" rel="stylesheet">
     <!--[if lt IE 9]>
@@ -48,11 +53,7 @@
             <a id="brand" class="brand" href="{% url 'views.index_page' %}"><img src="/static/img/brand.gif" title="韻典網" width="100" height="40"></a>
           {% endif %}
           <div class="nav-collapse">
-            {% if vertical == 1 %}
-              <ul class="nav" style="direction:rtl;">
-            {% else %}
-              <ul class="nav">
-            {% endif %}
+            <ul class="nav">
               <li class="{% block index_active %}{% endblock %}">
                 <a href="{% url 'views.index_page' vertical=vertical %}">首頁</a>
               </li>
