--- a/ytenx/templates/layout.html
+++ b/ytenx/templates/layout.html
@@ -23,7 +23,10 @@
         padding: 9px 0;
       }
       {% if vertical == 1 %}
-        li {
+        nav {
+          float: right;
+        }
+        .li  {
           float: right;
         }
       {% endif %}
