--- a/ytenx/templates/layout.html
+++ b/ytenx/templates/layout.html
@@ -22,29 +22,6 @@
       .sidebar-nav {
         padding: 9px 0;
       }
-      {% if vertical == 1 %}
-        .navbar {
-            .navbar-header {float: right;
-                a.logo { float: right !important;}
-            }
-            .navbar-collapse{
-                nav {
-
-                    ul.menu.navbar-nav {float: right;
-                        li {
-                            float: right;
-                        }
-                    }
-                    ul.menu.navbar-nav.secondary {float: left !important;
-                        li {
-                            float: right;
-                        }
-                    }
-
-                }
-            }
-        }
-      {% endif %}
     </style>
     <link href="/static/css/bootstrap-responsive.min.css" rel="stylesheet">
     <!--[if lt IE 9]>
@@ -73,35 +50,35 @@
           <div class="nav-collapse">
             <ul class="nav">
               <li class="{% block index_active %}{% endblock %}">
-                <a href="{% url 'views.index_page' vertical=vertical %}">首頁</a>
+                <a href="{% url 'views.index_page' vertical=vertical %}">&#x200F;首頁</a>
               </li>
               <li class="{% block kyonh_active %}{% endblock %}">
-                <a href="{% url 'kyonh.views.index_page' vertical=vertical %}">廣韻</a>
+                <a href="{% url 'kyonh.views.index_page' vertical=vertical %}">&#x200F;廣韻</a>
               </li>
               <li class="{% block trngyan_active %}{% endblock %}">
-                <a href="{% url 'trngyan.views.triung_ngyan_qim_yonh' vertical=vertical %}">中原音韻</a>
+                <a href="{% url 'trngyan.views.triung_ngyan_qim_yonh' vertical=vertical %}">&#x200F;中原音韻</a>
               </li>
               <li class="{% block tcenghyonhtsen_active %}{% endblock %}">
-                <a href="{% url 'tcenghyonhtsen.views.index_page' vertical=vertical %}">洪武正韻牋</a>
+                <a href="{% url 'tcenghyonhtsen.views.index_page' vertical=vertical %}">&#x200F;洪武正韻牋</a>
               </li>
               <li class="{% block pyonh_active %}{% endblock %}">
-                <a href="{% url 'pyonh.views.pyon_yonh' vertical=vertical %}">分韻撮要</a>
+                <a href="{% url 'pyonh.views.pyon_yonh' vertical=vertical %}">&#x200F;分韻撮要</a>
               </li>
               <li class="{% block dciangxkox_active %}{% endblock %}">
-                <a href="{% url 'dciangxkox.views.dciangx_kox' %}">上古音系</a>
+                <a href="{% url 'dciangxkox.views.dciangx_kox' %}">&#x200F;上古音系</a>
               </li>
               <li class="{% block byoh_lyuk_active %}{% endblock %}">
-                <a href="{% url 'byohlyuk.views.byoh_lyuk' '' %}">附錄</a>
+                <a href="{% url 'byohlyuk.views.byoh_lyuk' '' %}">&#x200F;附錄</a>
               </li>
               <li class="{% block about_active %}{% endblock %}">
-                <a href="{% url 'views.about_page' vertical=vertical %}">關於</a>
+                <a href="{% url 'views.about_page' vertical=vertical %}">&#x200F;關於</a>
               </li>
               <li class="{% block kiemx_sriek_active %}{% endblock %}">
-                <a href="{% url 'views.kiemx_sriek' vertical=vertical %}">高級檢索</a>
+                <a href="{% url 'views.kiemx_sriek' vertical=vertical %}">&#x200F;高級檢索</a>
               </li>
               <li>
                 {% if vertical == 1 %}
-                  <a href="{% url 'views.index_page' vertical=0 %}">橫版</a>
+                  <a href="{% url 'views.index_page' vertical=0 %}">&#x200F;橫版</a>
                 {% else %}
                   <a href="{% url 'views.index_page' vertical=1 %}">縱版</a>
                 {% endif %}
