--- a/ytenx/templates/layout.html
+++ b/ytenx/templates/layout.html
@@ -49,40 +49,69 @@
           {% endif %}
           <div class="nav-collapse">
             <ul class="nav">
-              <li class="{% block index_active %}{% endblock %}">
-                <a href="{% url 'views.index_page' vertical=vertical %}">&#x202F;首頁</a>
-              </li>
-              <li class="{% block kyonh_active %}{% endblock %}">
-                <a href="{% url 'kyonh.views.index_page' vertical=vertical %}">&#x202F;廣韻</a>
-              </li>
-              <li class="{% block trngyan_active %}{% endblock %}">
-                <a href="{% url 'trngyan.views.triung_ngyan_qim_yonh' vertical=vertical %}">&#x202F;中原音韻</a>
-              </li>
-              <li class="{% block tcenghyonhtsen_active %}{% endblock %}">
-                <a href="{% url 'tcenghyonhtsen.views.index_page' vertical=vertical %}">&#x202F;洪武正韻牋</a>
-              </li>
-              <li class="{% block pyonh_active %}{% endblock %}">
-                <a href="{% url 'pyonh.views.pyon_yonh' vertical=vertical %}">&#x202F;分韻撮要</a>
-              </li>
-              <li class="{% block dciangxkox_active %}{% endblock %}">
-                <a href="{% url 'dciangxkox.views.dciangx_kox' %}">&#x202F;上古音系</a>
-              </li>
-              <li class="{% block byoh_lyuk_active %}{% endblock %}">
-                <a href="{% url 'byohlyuk.views.byoh_lyuk' '' %}">&#x202F;附錄</a>
-              </li>
-              <li class="{% block about_active %}{% endblock %}">
-                <a href="{% url 'views.about_page' vertical=vertical %}">&#x202F;關於</a>
-              </li>
-              <li class="{% block kiemx_sriek_active %}{% endblock %}">
-                <a href="{% url 'views.kiemx_sriek' vertical=vertical %}">&#x202F;高級檢索</a>
-              </li>
-              <li>
-                {% if vertical == 1 %}
-                  <a href="{% url 'views.index_page' vertical=0 %}">&#x200F;橫版</a>
-                {% else %}
+              {% if vertical == 1 %}
+                <li class="{% block index_active %}{% endblock %}" style="float:right;">
+                  <a href="{% url 'views.index_page' vertical=vertical %}">&#x202F;首頁</a>
+                </li>
+                <li class="{% block kyonh_active %}{% endblock %}" style="float:right;">
+                  <a href="{% url 'kyonh.views.index_page' vertical=vertical %}">&#x202F;廣韻</a>
+                </li>
+                <li class="{% block trngyan_active %}{% endblock %}" style="float:right;">
+                  <a href="{% url 'trngyan.views.triung_ngyan_qim_yonh' vertical=vertical %}">&#x202F;中原音韻</a>
+                </li>
+                <li class="{% block tcenghyonhtsen_active %}{% endblock %}" style="float:right;">
+                  <a href="{% url 'tcenghyonhtsen.views.index_page' vertical=vertical %}">&#x202F;洪武正韻牋</a>
+                </li>
+                <li class="{% block pyonh_active %}{% endblock %}" style="float:right;">
+                  <a href="{% url 'pyonh.views.pyon_yonh' vertical=vertical %}">&#x202F;分韻撮要</a>
+                </li>
+                <li class="{% block dciangxkox_active %}{% endblock %}" style="float:right;">
+                  <a href="{% url 'dciangxkox.views.dciangx_kox' %}">&#x202F;上古音系</a>
+                </li>
+                <li class="{% block byoh_lyuk_active %}{% endblock %}" style="float:right;">
+                  <a href="{% url 'byohlyuk.views.byoh_lyuk' '' %}">&#x202F;附錄</a>
+                </li>
+                <li class="{% block about_active %}{% endblock %}" style="float:right;">
+                  <a href="{% url 'views.about_page' vertical=vertical %}">&#x202F;關於</a>
+                </li>
+                <li class="{% block kiemx_sriek_active %}{% endblock %}" style="float:right;">
+                  <a href="{% url 'views.kiemx_sriek' vertical=vertical %}">&#x202F;高級檢索</a>
+                </li>
+                <li style="float:right;">
+                  <a href="{% url 'views.index_page' vertical=0 %}">&#x202F;橫版</a>
+                </li>
+              {% else %}
+                <li class="{% block index_active %}{% endblock %}">
+                  <a href="{% url 'views.index_page' vertical=vertical %}">首頁</a>
+                </li>
+                <li class="{% block kyonh_active %}{% endblock %}">
+                  <a href="{% url 'kyonh.views.index_page' vertical=vertical %}">廣韻</a>
+                </li>
+                <li class="{% block trngyan_active %}{% endblock %}">
+                  <a href="{% url 'trngyan.views.triung_ngyan_qim_yonh' vertical=vertical %}">中原音韻</a>
+                </li>
+                <li class="{% block tcenghyonhtsen_active %}{% endblock %}">
+                  <a href="{% url 'tcenghyonhtsen.views.index_page' vertical=vertical %}">洪武正韻牋</a>
+                </li>
+                <li class="{% block pyonh_active %}{% endblock %}">
+                  <a href="{% url 'pyonh.views.pyon_yonh' vertical=vertical %}">分韻撮要</a>
+                </li>
+                <li class="{% block dciangxkox_active %}{% endblock %}">
+                  <a href="{% url 'dciangxkox.views.dciangx_kox' %}">上古音系</a>
+                </li>
+                <li class="{% block byoh_lyuk_active %}{% endblock %}">
+                  <a href="{% url 'byohlyuk.views.byoh_lyuk' '' %}">附錄</a>
+                </li>
+                <li class="{% block about_active %}{% endblock %}">
+                  <a href="{% url 'views.about_page' vertical=vertical %}">關於</a>
+                </li>
+                <li class="{% block kiemx_sriek_active %}{% endblock %}">
+                  <a href="{% url 'views.kiemx_sriek' vertical=vertical %}">高級檢索</a>
+                </li>
+                <li>
                   <a href="{% url 'views.index_page' vertical=1 %}">縱版</a>
-                {% endif %}
-              </li>              
+                </li>
+              {% endif %}              
             </ul>
             <form class="navbar-search pull-left" action="{% url 'views.zim' vertical=vertical %}">
               <input type="text" class="search-query span3" name="dzih" placeholder="在此輸入要檢索的字">
