--- a/ytenx/templates/layout.html
+++ b/ytenx/templates/layout.html
@@ -50,31 +50,31 @@
           <div class="nav-collapse">
             <ul class="nav">
               {% if vertical == 1 %}
-                <li class="{% block index_active %}{% endblock %}" style="float:right;">
+                <li class="{% block index_rtl_active %}{% endblock %}" style="float:right;">
                   <a href="{% url 'views.index_page' vertical=vertical %}">&#x202F;首頁</a>
                 </li>
-                <li class="{% block kyonh_active %}{% endblock %}" style="float:right;">
+                <li class="{% block kyonh_rtl_active %}{% endblock %}" style="float:right;">
                   <a href="{% url 'kyonh.views.index_page' vertical=vertical %}">&#x202F;廣韻</a>
                 </li>
-                <li class="{% block trngyan_active %}{% endblock %}" style="float:right;">
+                <li class="{% block trngyan_rtl_active %}{% endblock %}" style="float:right;">
                   <a href="{% url 'trngyan.views.triung_ngyan_qim_yonh' vertical=vertical %}">&#x202F;中原音韻</a>
                 </li>
-                <li class="{% block tcenghyonhtsen_active %}{% endblock %}" style="float:right;">
+                <li class="{% block tcenghyonhtsen_rtl_active %}{% endblock %}" style="float:right;">
                   <a href="{% url 'tcenghyonhtsen.views.index_page' vertical=vertical %}">&#x202F;洪武正韻牋</a>
                 </li>
-                <li class="{% block pyonh_active %}{% endblock %}" style="float:right;">
+                <li class="{% block pyonh_rtl_active %}{% endblock %}" style="float:right;">
                   <a href="{% url 'pyonh.views.pyon_yonh' vertical=vertical %}">&#x202F;分韻撮要</a>
                 </li>
-                <li class="{% block dciangxkox_active %}{% endblock %}" style="float:right;">
+                <li class="{% block dciangxkox_rtl_active %}{% endblock %}" style="float:right;">
                   <a href="{% url 'dciangxkox.views.dciangx_kox' %}">&#x202F;上古音系</a>
                 </li>
-                <li class="{% block byoh_lyuk_active %}{% endblock %}" style="float:right;">
+                <li class="{% block byoh_lyuk_rtl_active %}{% endblock %}" style="float:right;">
                   <a href="{% url 'byohlyuk.views.byoh_lyuk' '' %}">&#x202F;附錄</a>
                 </li>
-                <li class="{% block about_active %}{% endblock %}" style="float:right;">
+                <li class="{% block about_rtl_active %}{% endblock %}" style="float:right;">
                   <a href="{% url 'views.about_page' vertical=vertical %}">&#x202F;關於</a>
                 </li>
-                <li class="{% block kiemx_sriek_active %}{% endblock %}" style="float:right;">
+                <li class="{% block kiemx_sriek_rtl_active %}{% endblock %}" style="float:right;">
                   <a href="{% url 'views.kiemx_sriek' vertical=vertical %}">&#x202F;高級檢索</a>
                 </li>
                 <li style="float:right;">
