--- a/ytenx/templates/layout.html
+++ b/ytenx/templates/layout.html
@@ -50,7 +50,7 @@
           <div class="nav-collapse">
             <ul class="nav">
               {% if vertical == 1 %}
-                <li class="{% block index_rtl_active %}{% endblock %}" style="float:right;">
+                <li class="{% block index_rtl_active %}{% endblock %}" style="float:left;">
                   <a href="{% url 'views.index_page' vertical=vertical %}">&#x202F;首頁</a>
                 </li>
                 <li class="{% block kyonh_rtl_active %}{% endblock %}" style="float:right;">
