--- a/ytenx/templates/tcenghyonhtsen/sieux_yonh.html
+++ b/ytenx/templates/tcenghyonhtsen/sieux_yonh.html
@@ -49,7 +49,11 @@
       <tr>
         <td>南曲</td>
         <td>{{sieux_yonh.ipa|neom_khiowk|beautify_mandarin_ipa}}</td>
-      </tr>      
+      </tr>
+      <tr>
+        <td>Audio</td>
+        <td><audio controls src="{{sieux_yonh.ziox|mandarin_audio_path}}"><td>
+      </tr>
     </table>
   </div>
 </div>
