--- a/ytenx/templates/tcenghyonhtsen/sieux_yonh.html
+++ b/ytenx/templates/tcenghyonhtsen/sieux_yonh.html
@@ -52,7 +52,7 @@
       </tr>
       <tr>
         <td>Audio</td>
-        <td><audio controls src="{{sieux_yonh.ziox|mandarin_audio_path}}"><td>
+        <td><audio controls src="{{sieux_yonh.ziox|mandarin_audio_path}}"></audio></td>
       </tr>
     </table>
   </div>
