--- a/ytenx/templates/zim.html
+++ b/ytenx/templates/zim.html
@@ -32,21 +32,21 @@
   {% if dzih_list.kyonh %}
     <h1>廣韻</h1>
     {% for dzih in dzih_list.kyonh %}
-      <h2>
-        <span class="badge badge-info" style="writing-mode:horizontal-lr">{{forloop.counter}}</span>
-        <table>
-          <tr>
-            <td>
+      <table>
+        <tr>
+          <td>
+            <h2>            
+              <span class="badge badge-info" style="writing-mode:horizontal-tb">{{forloop.counter}}</span>
               <a href="{% url 'kyonh.views.dzih' dzih.ziox %}">{{dzih.dzih}}</a>
-            </td>
-            <td>
-              <p style="writing-mode:horizontal-lr">
-                {{dzih.sieuxYonh.preng.baxter}}
-              </p>
-            </td>
-          </tr>
-        </table>
-      </h2>
+            </h2>              
+          </td>
+          <td>
+            <p style="writing-mode:horizontal-tb">
+              {{dzih.sieuxYonh.preng.baxter}}
+            </p>
+          </td>
+        </tr>
+      </table>
       <h3>
         {% if dzih.sieuxYonh.pyanx %}
           <a href="{% url 'kyonh.views.pyanx_dciangx_page' dzih.sieuxYonh.pyanx.dciangx.dzih %}">{{dzih.sieuxYonh.pyanx.dciangx}}</a><a href="{% url 'kyonh.views.pyanx_ghrax_page' dzih.sieuxYonh.pyanx.ghrax.dzih %}">{{dzih.sieuxYonh.pyanx.ghrax}}</a>切
