--- a/ytenx/templates/zim.html
+++ b/ytenx/templates/zim.html
@@ -36,19 +36,19 @@
         <table>
           <tr>
             <h2>                        
-              <td align="top">
+              <td align="right">
                 <span class="badge badge-info" style="writing-mode:horizontal-tb">{{forloop.counter}}</span>
               </td>
-              <td align="top">
+              <td align="right">
                 <a href="{% url 'kyonh.views.dzih' dzih.ziox %}">{{dzih.dzih}}</a>
               </td>
             </h2>              
-            <td align="top">
+            <td align="right">
               <p style="writing-mode:horizontal-tb">
                 {{dzih.sieuxYonh.preng.baxter}}
               </p>
             </td>
-            <td align="top">
+            <td align="right">
               <p>
                 {% if dzih.sieuxYonh.pyanx %}
                   <a href="{% url 'kyonh.views.pyanx_dciangx_page' dzih.sieuxYonh.pyanx.dciangx.dzih %}">{{dzih.sieuxYonh.pyanx.dciangx}}</a><a href="{% url 'kyonh.views.pyanx_ghrax_page' dzih.sieuxYonh.pyanx.ghrax.dzih %}">{{dzih.sieuxYonh.pyanx.ghrax}}</a>切
@@ -62,10 +62,9 @@
               {{dzih.ngieh}}
             </td>
           </tr>
-          <tr><td><p></p></td></tr>
         </table>
       </p>
-      <p></p>
+      <br>
     {% endfor %}
   {% endif %}
   {% if dzih_list.trngyan %}
