--- a/ytenx/templates/zim.html
+++ b/ytenx/templates/zim.html
@@ -33,7 +33,7 @@
     <h1>廣韻</h1>
     {% for dzih in dzih_list.kyonh %}
       <p>
-        <table vertical-align="top">
+        <table style="vertical-align:top">
           <tr>
             <h2>                        
               <td>
