--- a/ytenx/templates/zim.html
+++ b/ytenx/templates/zim.html
@@ -64,7 +64,7 @@
           </tr>
           <tr>
             <td></td>
-            <td>
+            <td colspan="3">
               <hr>
               <p>
                 {{dzih.ngieh}}
