--- a/ytenx/templates/zim.html
+++ b/ytenx/templates/zim.html
@@ -35,17 +35,17 @@
       <p>
         <table>
           <tr>
-            <td style="vertical-align:top">
+            <td style="vertical-align:bottom">
               <h2>
                 <span class="badge badge-info" style="writing-mode:horizontal-tb">{{forloop.counter}}</span>
               </h2>
             </td>
-            <td style="vertical-align:top">
+            <td style="vertical-align:bottom">
               <h2>
                 <a href="{% url 'kyonh.views.dzih' dzih.ziox %}">{{dzih.dzih}}</a>
               </h2>
             </td>            
-            <td style="vertical-align:top">
+            <td style="vertical-align:bottom">
               <p style="writing-mode:horizontal-tb">
                 {{dzih.sieuxYonh.preng.baxter}}
               </p>
