--- a/ytenx/templates/zim.html
+++ b/ytenx/templates/zim.html
@@ -45,12 +45,12 @@
                 <a href="{% url 'kyonh.views.dzih' dzih.ziox %}">{{dzih.dzih}}</a>
               </h2>
             </td>            
-            <td style="vertical-align:bottom">
+            <td style="vertical-align:bottom;border-bottom:1pt solid black;">
               <p style="writing-mode:horizontal-tb">
                 {{dzih.sieuxYonh.preng.baxter}}
               </p>
             </td>
-            <td style="vertical-align:bottom">
+            <td style="vertical-align:bottom;border-bottom:1pt solid black;">
               <p>
                 {% if dzih.sieuxYonh.pyanx %}
                   <a href="{% url 'kyonh.views.pyanx_dciangx_page' dzih.sieuxYonh.pyanx.dciangx.dzih %}">{{dzih.sieuxYonh.pyanx.dciangx}}</a><a href="{% url 'kyonh.views.pyanx_ghrax_page' dzih.sieuxYonh.pyanx.ghrax.dzih %}">{{dzih.sieuxYonh.pyanx.ghrax}}</a>切
