--- a/ytenx/templates/zim.html
+++ b/ytenx/templates/zim.html
@@ -40,7 +40,7 @@
                 <span class="badge badge-info" style="writing-mode:horizontal-tb">{{forloop.counter}}</span>
               </h2>
             </td>
-            <td style="vertical-align:bottom">
+            <td style="vertical-align:bottom;border-left:1pt solid black;">
               <h2>
                 <a href="{% url 'kyonh.views.dzih' dzih.ziox %}">{{dzih.dzih}}</a>
               </h2>
