--- a/ytenx/templates/zim.html
+++ b/ytenx/templates/zim.html
@@ -91,14 +91,23 @@
   {% endif %}
   {% if dzih_list.tcyts %}
     {% for dzih in dzih_list.tcyts %}
-      <h2>
-        <span class="badge badge-info">{{forloop.counter}}</span>
-        <a href="{% url 'tcenghyonhtsen.views.sieux_yonh_page' dzih.sieux.ziox %}">{{dzih.dzih}}</a>
-      </h2>
-      <h3>
-        {{dzih.sieux.ipa}}
-      </h3>
-      <p>
+      <table>
+        <tr>
+          <td style="vertical-align:bottom">
+            <h2>
+              <span class="badge badge-info">{{forloop.counter}}</span>
+            </h2>
+          <td>
+            <h2>
+              <a href="{% url 'tcenghyonhtsen.views.sieux_yonh_page' dzih.sieux.ziox %}">{{dzih.dzih}}</a>
+            </h2>
+          </td>
+          <td>
+            <h3>
+              {{dzih.sieux.ipa}}
+            </h3>
+          </td>
+        </table>
         {{dzih.sieux.pyanx.dciangx}}{{dzih.sieux.pyanx.ghrax}}切
         {{dzih.sieux.deuh|deuh}}聲<a href="{% url 'tcenghyonhtsen.views.yonh_miuk_page' dzih.sieux.yonhMiuk.dzih %}">{{dzih.sieux.yonhMiuk}}</a>
         <a href="{% url 'tcenghyonhtsen.views.sieux_yonh_page' dzih.sieux.ziox %}">{{dzih.sieux}}</a>小韻
