--- a/ytenx/templates/zim.html
+++ b/ytenx/templates/zim.html
@@ -104,7 +104,9 @@
           </td>
           <td>
             <h3>
-              {{dzih.sieux.ipa}}
+              <p style="writing-mode:horizontal-tb">
+                {{dzih.sieux.ipa}}
+              </p>
             </h3>
           </td>
         </table>
