--- a/ytenx/templates/layout.html
+++ b/ytenx/templates/layout.html
@@ -16,6 +16,9 @@
       .sidebar-nav {
         padding: 9px 0;
       }
+      .badge-info {
+        writing-mode: horizontal-tb;
+      }
       {% if request.session.layout == 'vertical' %}        
         .sidebar-nav {
           direction: rtl;
