--- a/ytenx/templates/layout.html
+++ b/ytenx/templates/layout.html
@@ -112,7 +112,7 @@
                 </li>
               {% else %}
                 <li>
-                  <a href="{% url 'views.index_page' %}?layout=vertical">縱版</a>
+                  <a href="{% url 'views.index_page' %}?layout=vertical&path={{request.get_full_path}}">縱版</a>
                 </li>
               {% endif %}
             </ul>                
