--- a/ytenx/templates/layout.html
+++ b/ytenx/templates/layout.html
@@ -108,7 +108,7 @@
               </li>
               {% if request.session.layout == 'vertical' %}
                 <li style="float:right;">
-                  <a href="{% url 'views.index_page' %}?layout=horizontal">橫版</a>
+                  <a href="{% url 'views.index_page' %}?layout=horizontal&path={{request.get_full_path}}">橫版</a>
                 </li>
               {% else %}
                 <li>
