--- a/ytenx/templates/layout.html
+++ b/ytenx/templates/layout.html
@@ -19,6 +19,9 @@
       .badge-info {
         writing-mode: horizontal-tb;
       }
+      .blockquote {
+        border-left: 0px;
+      }
       {% if request.session.layout == 'vertical' %}        
         .sidebar-nav {
           direction: rtl;
