--- a/ytenx/templates/layout.html
+++ b/ytenx/templates/layout.html
@@ -19,8 +19,20 @@
       .badge-info {
         writing-mode: horizontal-tb;
       }
-      .blockquote {
-        border-left: 0px;
+      blockquote {
+        background: #f9f9f9;
+        border-left: 0px solid #ccc;
+        margin: 1.5em 10px;
+        padding: 0.5em 10px;
+        quotes: "\201C""\201D""\2018""\2019";
+      }
+      blockquote:before {
+        color: #ccc;
+        content: open-quote;
+        font-size: 4em;
+        line-height: 0.1em;
+        margin-right: 0.25em;
+        vertical-align: -0.4em;
       }
       {% if request.session.layout == 'vertical' %}        
         .sidebar-nav {
