--- a/ytenx/templates/layout.html
+++ b/ytenx/templates/layout.html
@@ -22,6 +22,7 @@
       {% if request.session.layout == 'vertical' %}        
         blockquote {
           border-left: 0px solid #ccc;
+          border-top: 0px solid #ccc;
         }      
         .sidebar-nav {
           direction: rtl;
