--- a/ytenx/templates/layout.html
+++ b/ytenx/templates/layout.html
@@ -21,8 +21,8 @@
       }
       {% if request.session.layout == 'vertical' %}        
         blockquote {
-          border-left: 0px solid #ccc;
-          border-top: 10px solid #ccc;
+          border-left: 0px;
+          border-top: 5px;
         }      
         .sidebar-nav {
           direction: rtl;
