--- a/ytenx/templates/layout.html
+++ b/ytenx/templates/layout.html
@@ -22,7 +22,7 @@
       {% if request.session.layout == 'vertical' %}        
         blockquote {
           border-left: 0px;
-          border-top: 5px;
+          border-top: 5px solid transparent;
         }      
         .sidebar-nav {
           direction: rtl;
