--- a/ytenx/templates/layout.html
+++ b/ytenx/templates/layout.html
@@ -23,7 +23,10 @@
         blockquote {
           border-left: 0px;
           border-top: 5px solid transparent;
-        }      
+        }
+        blockquote::before {
+          content: '　';
+        }
         .sidebar-nav {
           direction: rtl;
           unicode-bidi: bidi-override;
