--- a/ytenx/templates/layout.html
+++ b/ytenx/templates/layout.html
@@ -24,7 +24,9 @@
           border-left: 0px;
         }
         blockquote::before {
-          content: '';
+          content: ' ';
+          margin-right: 0em;
+          vertical-align: 0em;          
         }
         .sidebar-nav {
           direction: rtl;
