--- a/ytenx/templates/layout.html
+++ b/ytenx/templates/layout.html
@@ -25,7 +25,7 @@
           border-top: 0px;
         }
         blockquote::before {
-          content: ' ';
+          content: '「';
           margin-right: 0em;
           vertical-align: 0em;
         }
