--- a/ytenx/templates/layout.html
+++ b/ytenx/templates/layout.html
@@ -25,9 +25,8 @@
           border-top: 0px;
         }
         blockquote::before {
-          content: '「';
+          content: '';
           margin-right: 0em;
-          vertical-align: 0em;
         }
         .sidebar-nav {
           direction: rtl;
