--- a/ytenx/templates/zim.html
+++ b/ytenx/templates/zim.html
@@ -64,7 +64,7 @@
         {% if request.session.layout != 'vertical' %}({{dzih.sieuxYonh.preng.baxter}}){% endif %}
       </p>
       <blockquote>{{dzih.ngieh}}</blockquote
-      <hr size="6">
+      <div style="height: 10px; background-color: #EAEFF5"></div>
     {% endfor %}
   {% endif %}
   {% if dzih_list.trngyan %}
