--- a/ytenx/templates/zim.html
+++ b/ytenx/templates/zim.html
@@ -63,7 +63,7 @@
         {{dzih.sieuxYonh.yonh.gheh.cjep}}{{dzih.sieuxYonh.yonh.ho|ho}}{{dzih.sieuxYonh.yonh.tongx|sryoh}}{{dzih.sieuxYonh.yonhMiuk.deuh|deuh}}<a href="{% url 'kyonh.views.yonh_miuk_page' dzih.sieuxYonh.yonhMiuk.dzih %}">{{dzih.sieuxYonh.yonhMiuk}}</a><a href="{% url 'kyonh.views.cjeng_mux_page' dzih.sieuxYonh.cjeng.dzih %}">{{dzih.sieuxYonh.cjeng}}</a>
         {% if request.session.layout != 'vertical' %}({{dzih.sieuxYonh.preng.baxter}}){% endif %}
       </p>
-      <blockquote>{{dzih.ngieh}}</blockquote
+      <blockquote>{{dzih.ngieh}}</blockquote>
       <div style="height: 10px; background-color: #EAEFF5"></div>
     {% endfor %}
   {% endif %}
