--- a/ytenx/templates/zim.html
+++ b/ytenx/templates/zim.html
@@ -144,8 +144,8 @@
         <span class="badge badge-info">{{forloop.counter}}</span>
         <a href="{% url 'tcenghyonhtsen.views.sieux_yonh_page' dzih.sieux.ziox %}">{{dzih.dzih}}</a>
       </h2>
-      <h3>
-        {{ style="writing-mode:horizontal-tb" dzih.sieux.ipa}}
+      <h3 style="writing-mode:horizontal-tb">
+        {{dzih.sieux.ipa}}
       </h3>
       <p>
         {{dzih.sieux.pyanx.dciangx}}{{dzih.sieux.pyanx.ghrax}}切
