--- a/ytenx/templates/zim.html
+++ b/ytenx/templates/zim.html
@@ -143,10 +143,15 @@
       <h2>
         <span class="badge badge-info">{{forloop.counter}}</span>
         <a href="{% url 'tcenghyonhtsen.views.sieux_yonh_page' dzih.sieux.ziox %}">{{dzih.dzih}}</a>
+        {% if request.session.layout == 'vertical' %}        
+          <span style="writing-mode:horizontal-tb">{{dzih.sieux.ipa}}</span>
+        {% endif %}
       </h2>
-      <h3 style="writing-mode:horizontal-tb">
-        {{dzih.sieux.ipa}}
-      </h3>
+      {% if request.session.layout != 'vertical' %}        
+        <h3>
+          {{dzih.sieux.ipa}}
+        </h3>
+      {% endif %}
       <p>
         {{dzih.sieux.pyanx.dciangx}}{{dzih.sieux.pyanx.ghrax}}切
         {{dzih.sieux.deuh|deuh}}聲<a href="{% url 'tcenghyonhtsen.views.yonh_miuk_page' dzih.sieux.yonhMiuk.dzih %}">{{dzih.sieux.yonhMiuk}}</a>
@@ -214,11 +219,11 @@
       </p>
       <p>擬音 {{dzih.ngix_1}}</p>
       <blockquote>{{dzih.tryoh}}</blockquote>
+      {% if request.session.layout == 'vertical' %}
+        <div style="width: 5px; background-color: #EAEFF5"></div>
+        <br>
+      {% endif %}
     {% endfor %}
-    {% if request.session.layout == 'vertical' %}
-      <div style="width: 5px; background-color: #EAEFF5"></div>
-      <br>
-    {% endif %}
   {% endif %}
 </div>
 {% endblock %}
