--- a/ytenx/templates/layout.html
+++ b/ytenx/templates/layout.html
@@ -51,12 +51,14 @@
           writing-mode:vertical-rl;
           text-orientation:mixed;
           width:100%;
+          height:100%;
           overflow:auto;
         }
         .span12 {
           writing-mode:vertical-rl;
           text-orientation:mixed;
           width:100%;
+          height:100%;
           overflow:auto;
         }
       {% endif %}
