--- a/ytenx/templates/layout.html
+++ b/ytenx/templates/layout.html
@@ -20,7 +20,7 @@
         writing-mode: horizontal-tb;
       }
       {% if request.session.layout == 'vertical' %}
-        {% include vertical_style.html %}
+        {% include "vertical_style.html" %}
       {% endif %}
     </style>
     <link href="/static/css/bootstrap-responsive.min.css" rel="stylesheet">
