--- a/ytenx/templates/vertical_style.html
+++ b/ytenx/templates/vertical_style.html
@@ -40,3 +40,9 @@
           height:100%;
           overflow:auto;
         }
+pagination {
+  writing-mode: horizontal-tb;
+}
+pagination ul li {
+  float: right;
+}
