--- a/ytenx/templates/vertical_style.html
+++ b/ytenx/templates/vertical_style.html
@@ -40,9 +40,9 @@
           height:100%;
           overflow:auto;
         }
-pagination {
+.pagination {
   writing-mode: horizontal-tb;
 }
-pagination ul li {
+.pagination ul li {
   float: right;
 }
