--- a/ytenx/templates/vertical_style.html
+++ b/ytenx/templates/vertical_style.html
@@ -7,6 +7,10 @@
           content: '';
           margin-right: 0em;
         }
+        .sidebar-nav {
+          direction: rtl;
+          unicode-bidi: bidi-override;
+        }
         .sidebar-nav ul li a {
           direction: rtl;
           unicode-bidi: bidi-override;
