--- a/ytenx/templates/vertical_style.html
+++ b/ytenx/templates/vertical_style.html
@@ -46,11 +46,11 @@
 .pagination ul li {
   float: right;
 }
-.table tr td {
+.table tbody tr td {
   border-style: none;
   height: auto;
 }
-.table th td {
+.table tbody th td {
   border-style: none;
   width: auto;
 }
