--- a/ytenx/templates/vertical_style.html
+++ b/ytenx/templates/vertical_style.html
@@ -46,11 +46,12 @@
 .pagination ul li {
   float: right;
 }
-.table tbody tr td {
+table tbody tr td {
   border-style: none;
+  width: auto;
   height: auto;
 }
-.table tbody th td {
+table tbody th td {
   border-style: none;
   width: auto;
 }
