--- a/ytenx/templates/vertical_style.html
+++ b/ytenx/templates/vertical_style.html
@@ -46,12 +46,12 @@
 .pagination ul li {
   float: right;
 }
-table tbody tr td {
+table tr td {
   border-style: none;
   width: auto;
   height: auto;
 }
-table tbody th td {
+table th td {
   border-style: none;
   width: auto;
 }
