--- a/ytenx/templates/kyonh/index.html
+++ b/ytenx/templates/kyonh/index.html
@@ -21,7 +21,7 @@
       <th>聲母</th>
   	</tr>
   	<tr>
-      <td>脣音</td>
+      <td style="height:auto;">脣音</td>
       <td>
       	<a href="/kyonh/cjeng/%E5%B9%AB/">幫</a>
       	<a href="/kyonh/cjeng/%E6%BB%82/">滂</a>
@@ -30,7 +30,7 @@
       </td>
   	</tr>
   	<tr>
-      <td>舌頭音</td>
+      <td style="width:auto;">舌頭音</td>
       <td>
       	<a href="/kyonh/cjeng/%E7%AB%AF/">端</a>
       	<a href="/kyonh/cjeng/%E9%80%8F/">透</a>
