--- a/ytenx/templates/kyonh/index.html
+++ b/ytenx/templates/kyonh/index.html
@@ -17,12 +17,12 @@
   <p>韻典網採用了<strong>三十八聲母</strong>分類的系統，在三十七聲母的基礎上，將「喻」母三等分立爲「云」母，不合併到「匣」母，主要原因是《廣韻》反切中沒有涉及「云」母與「匣」母混切，並且「云」母在後世爲次濁音，與全濁的「匣」母不同。儘管「云」母上古來源很可能是「匣」母，但至少在切韻成書時期已經分離，故不應列爲廣韻的一個聲母。</p>
   <table class="table table-condensed" style="height:auto;width:auto;">
   	<tr>
-      <th style="height:auto;width:auto;">聲類</th>
-      <th style="height:auto;width:auto;">聲母</th>
+      <th>聲類</th>
+      <th>聲母</th>
   	</tr>
   	<tr>
-      <td style="height:auto;width:auto;">脣音</td>
-      <td style="height:auto;width:auto;">
+      <td>脣音</td>
+      <td>
       	<a href="/kyonh/cjeng/%E5%B9%AB/">幫</a>
       	<a href="/kyonh/cjeng/%E6%BB%82/">滂</a>
       	<a href="/kyonh/cjeng/%E4%B8%A6/">並</a>
@@ -30,8 +30,8 @@
       </td>
   	</tr>
   	<tr>
-      <td style="height:auto;width:auto;">舌頭音</td>
-      <td style="height:auto;width:auto;">
+      <td>舌頭音</td>
+      <td>
       	<a href="/kyonh/cjeng/%E7%AB%AF/">端</a>
       	<a href="/kyonh/cjeng/%E9%80%8F/">透</a>
       	<a href="/kyonh/cjeng/%E5%AE%9A/">定</a>
