--- a/ytenx/templates/vertical_style.html
+++ b/ytenx/templates/vertical_style.html
@@ -46,12 +46,12 @@
 .pagination ul li {
   float: right;
 }
-table tr td {
-  border-style: none;
+.table {
   width: auto;
-  height: auto;
 }
-table th td {
+.table tr td {
   border-style: none;
-  width: auto;
+}
+.table tr th {
+  border-style: none;
 }
