--- a/ytenx/templates/kyonh/sieux_yonh_pieux.html
+++ b/ytenx/templates/kyonh/sieux_yonh_pieux.html
@@ -18,12 +18,12 @@
   width: 4em;
 }
 </style>
-<div style="writing-mode:horiztontal-tb">
 <div class="page-header">
   <h1>小韻表 <small>廣韻</small></h1>
 </div>
+<div style="writing-mode:horiztontal-tb">
 <div class="row">
-  <div id="search" class="span8">
+  <div id="search" class="span8" style="writing-mode:horiztontal-tb;direction:rtl;">
   <form method="get" action="">
     <ul>
       <li>
