--- a/ytenx/templates/kyonh/sieux_yonh_pieux.html
+++ b/ytenx/templates/kyonh/sieux_yonh_pieux.html
@@ -21,9 +21,9 @@
 <div class="page-header">
   <h1>小韻表 <small>廣韻</small></h1>
 </div>
-<div style="writing-mode:horiztontal-tb">
+<div style="writing-mode:horizontal-tb">
 <div class="row">
-  <div id="search" class="span8" style="writing-mode:horiztontal-tb;direction:rtl;">
+  <div id="search" class="span8" style="writing-mode:horizontal-tb;direction:rtl;">
   <form method="get" action="">
     <ul>
       <li>
