--- a/ytenx/templates/kyonh/sieux_yonh_pieux.html
+++ b/ytenx/templates/kyonh/sieux_yonh_pieux.html
@@ -23,7 +23,7 @@
 </div>
 <div style="writing-mode:horizontal-tb">
 <div class="row">
-  <div id="search" class="span8" style="writing-mode:horizontal-tb;direction:rtl;">
+  <div id="search" class="span8 horizontal-cn">
   <form method="get" action="">
     <ul>
       <li>
@@ -97,7 +97,7 @@
 </div>
 
 <div class="row">
-  <div class="span8"  style="writing-mode:vertical-rl">
+  <div class="span8"  style="writing-mode:vertical-rl;width=100%">
       <table class="table table-bordered table-condensed">
     	<tr>
     	  <th>次序</th>
