--- a/ytenx/templates/vertical_style.html
+++ b/ytenx/templates/vertical_style.html
@@ -23,6 +23,7 @@
           unicode-bidi: bidi-override;
         }
         .horizontal-cn {
+          writing-mode:horizontal-tb;
           direction: rtl;
           unicode-bidi: bidi-override;
         }
