--- a/ytenx/templates/kyonh/sieux_yonh_pieux.html
+++ b/ytenx/templates/kyonh/sieux_yonh_pieux.html
@@ -97,7 +97,7 @@
 </div>
 
 <div class="row">
-  <div class="span8"  style="writing-mode:vertical-rl;width:100%;overflow:auto">
+  <div class="span8"  style="writing-mode:vertical-rl;width:100%;height:100%">
       <table class="table table-bordered table-condensed">
     	<tr>
     	  <th>次序</th>
