--- a/ytenx/templates/vertical_style.html
+++ b/ytenx/templates/vertical_style.html
@@ -42,7 +42,7 @@
           overflow:auto;
         }
 .pagination {
-  text-align: center;
+  text-align: right;
   writing-mode: horizontal-tb;
 }
 .pagination ul li {
